swagger docs complete
